# Oxide.Native

./: CMakeLists.txt  LICENSE  Oxide.Native.sln  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  Oxide.Native.vcxproj  Oxide.Native.vcxproj.filters  OxideNative.cpp  OxideNative.h  framework.h
